工具/groff-1.22/src/preproc/pic/y.output
Terminals which are not used

   DEFINE
   UNDEF


State 111 conflicts: 1 shift/reduce
State 204 conflicts: 1 shift/reduce


Grammar

    0 $accept: top $end

    1 top: optional_separator
    2    | element_list

    3 element_list: optional_separator middle_element_list optional_separator

    4 middle_element_list: element
    5                    | middle_element_list separator element

    6 optional_separator: /* empty */
    7                   | separator

    8 separator: ';'
    9          | separator ';'

   10 placeless_element: FIGNAME '=' macro_name
   11                  | VARIABLE '=' any_expr
   12                  | VARIABLE ':' '=' any_expr
   13                  | UP
   14                  | DOWN
   15                  | LEFT
   16                  | RIGHT
   17                  | COMMAND_LINE
   18                  | COMMAND print_args
   19                  | PRINT print_args

   20 @1: /* empty */

   21 placeless_element: SH @1 DELIMITED
   22                  | COPY TEXT

   23 @2: /* empty */

   24 @3: /* empty */

   25 placeless_element: COPY TEXT THRU @2 DELIMITED @3 until

   26 @4: /* empty */

   27 @5: /* empty */

   28 placeless_element: COPY THRU @4 DELIMITED @5 until

   29 @6: /* empty */

   30 placeless_element: FOR VARIABLE '=' expr TO expr optional_by DO @6 DELIMITED
   31                  | simple_if

   32 @7: /* empty */

   33 placeless_element: simple_if ELSE @7 DELIMITED
   34                  | reset_variables
   35                  | RESET

   36 macro_name: VARIABLE
   37           | LABEL

   38 reset_variables: RESET VARIABLE
   39                | reset_variables VARIABLE
   40                | reset_variables ',' VARIABLE

   41 print_args: print_arg
   42           | print_args print_arg

   43 print_arg: expr
   44          | text
   45          | position

   46 @8: /* empty */

   47 simple_if: IF any_expr THEN @8 DELIMITED

   48 until: /* empty */
   49      | UNTIL TEXT

   50 any_expr: expr
   51         | text_expr

   52 text_expr: text EQUALEQUAL text
   53          | text NOTEQUAL text
   54          | text_expr ANDAND text_expr
   55          | text_expr ANDAND expr
   56          | expr ANDAND text_expr
   57          | text_expr OROR text_expr
   58          | text_expr OROR expr
   59          | expr OROR text_expr
   60          | '!' text_expr

   61 optional_by: /* empty */
   62            | BY expr
   63            | BY '*' expr

   64 element: object_spec
   65        | LABEL ':' optional_separator element
   66        | LABEL ':' optional_separator position_not_place
   67        | LABEL ':' optional_separator place

   68 @9: /* empty */

   69 @10: /* empty */

   70 element: '{' @9 element_list '}' @10 optional_element
   71        | placeless_element

   72 optional_element: /* empty */
   73                 | element

   74 object_spec: BOX
   75            | CIRCLE
   76            | ELLIPSE
   77            | ARC
   78            | LINE
   79            | ARROW
   80            | MOVE
   81            | SPLINE
   82            | text
   83            | PLOT expr
   84            | PLOT expr text

   85 @11: /* empty */

   86 object_spec: '[' @11 element_list ']'
   87            | object_spec HEIGHT expr
   88            | object_spec RADIUS expr
   89            | object_spec WIDTH expr
   90            | object_spec DIAMETER expr
   91            | object_spec expr
   92            | object_spec UP
   93            | object_spec UP expr
   94            | object_spec DOWN
   95            | object_spec DOWN expr
   96            | object_spec RIGHT
   97            | object_spec RIGHT expr
   98            | object_spec LEFT
   99            | object_spec LEFT expr
  100            | object_spec FROM position
  101            | object_spec TO position
  102            | object_spec AT position
  103            | object_spec WITH path
  104            | object_spec WITH position
  105            | object_spec BY expr_pair
  106            | object_spec THEN
  107            | object_spec SOLID
  108            | object_spec DOTTED
  109            | object_spec DOTTED expr
  110            | object_spec DASHED
  111            | object_spec DASHED expr
  112            | object_spec FILL
  113            | object_spec FILL expr
  114            | object_spec XSLANTED expr
  115            | object_spec YSLANTED expr
  116            | object_spec SHADED text
  117            | object_spec COLORED text
  118            | object_spec OUTLINED text
  119            | object_spec CHOP
  120            | object_spec CHOP expr
  121            | object_spec SAME
  122            | object_spec INVISIBLE
  123            | object_spec LEFT_ARROW_HEAD
  124            | object_spec RIGHT_ARROW_HEAD
  125            | object_spec DOUBLE_ARROW_HEAD
  126            | object_spec CW
  127            | object_spec CCW
  128            | object_spec text
  129            | object_spec LJUST
  130            | object_spec RJUST
  131            | object_spec ABOVE
  132            | object_spec BELOW
  133            | object_spec THICKNESS expr
  134            | object_spec ALIGNED

  135 text: TEXT
  136     | SPRINTF '(' TEXT sprintf_args ')'

  137 sprintf_args: /* empty */
  138             | sprintf_args ',' expr

  139 position: position_not_place
  140         | place
  141         | '(' place ')'

  142 position_not_place: expr_pair
  143                   | position '+' expr_pair
  144                   | '(' position '+' expr_pair ')'
  145                   | position '-' expr_pair
  146                   | '(' position '-' expr_pair ')'
  147                   | '(' position ',' position ')'
  148                   | expr between position AND position
  149                   | '(' expr between position AND position ')'
  150                   | expr_not_lower_than '<' position ',' position '>'
  151                   | '(' expr_not_lower_than '<' position ',' position '>' ')'

  152 between: BETWEEN
  153        | OF THE WAY BETWEEN

  154 expr_pair: expr ',' expr
  155          | '(' expr_pair ')'

  156 place: label
  157      | label corner
  158      | corner label
  159      | corner OF label
  160      | HERE

  161 label: LABEL
  162      | nth_primitive
  163      | label '.' LABEL

  164 ordinal: ORDINAL
  165        | '`' any_expr TH

  166 optional_ordinal_last: LAST
  167                      | ordinal LAST

  168 nth_primitive: ordinal object_type
  169              | optional_ordinal_last object_type

  170 object_type: BOX
  171            | CIRCLE
  172            | ELLIPSE
  173            | ARC
  174            | LINE
  175            | ARROW
  176            | SPLINE
  177            | '[' ']'
  178            | TEXT

  179 label_path: '.' LABEL
  180           | label_path '.' LABEL

  181 relative_path: corner
  182              | label_path
  183              | label_path corner

  184 path: relative_path
  185     | '(' relative_path ',' relative_path ')'
  186     | ORDINAL LAST object_type relative_path
  187     | LAST object_type relative_path
  188     | ORDINAL object_type relative_path
  189     | LABEL relative_path

  190 corner: DOT_N
  191       | DOT_E
  192       | DOT_W
  193       | DOT_S
  194       | DOT_NE
  195       | DOT_SE
  196       | DOT_NW
  197       | DOT_SW
  198       | DOT_C
  199       | DOT_START
  200       | DOT_END
  201       | TOP
  202       | BOTTOM
  203       | LEFT
  204       | RIGHT
  205       | UPPER LEFT
  206       | LOWER LEFT
  207       | UPPER RIGHT
  208       | LOWER RIGHT
  209       | LEFT_CORNER
  210       | RIGHT_CORNER
  211       | UPPER LEFT_CORNER
  212       | LOWER LEFT_CORNER
  213       | UPPER RIGHT_CORNER
  214       | LOWER RIGHT_CORNER
  215       | NORTH
  216       | SOUTH
  217       | EAST
  218       | WEST
  219       | CENTER
  220       | START
  221       | END

  222 expr: expr_lower_than
  223     | expr_not_lower_than

  224 expr_lower_than: expr '<' expr

  225 expr_not_lower_than: VARIABLE
  226                    | NUMBER
  227                    | place DOT_X
  228                    | place DOT_Y
  229                    | place DOT_HT
  230                    | place DOT_WID
  231                    | place DOT_RAD
  232                    | expr '+' expr
  233                    | expr '-' expr
  234                    | expr '*' expr
  235                    | expr '/' expr
  236                    | expr '%' expr
  237                    | expr '^' expr
  238                    | '-' expr
  239                    | '(' any_expr ')'
  240                    | SIN '(' any_expr ')'
  241                    | COS '(' any_expr ')'
  242                    | ATAN2 '(' any_expr ',' any_expr ')'
  243                    | LOG '(' any_expr ')'
  244                    | EXP '(' any_expr ')'
  245                    | SQRT '(' any_expr ')'
  246                    | K_MAX '(' any_expr ',' any_expr ')'
  247                    | K_MIN '(' any_expr ',' any_expr ')'
  248                    | INT '(' any_expr ')'
  249                    | RAND '(' any_expr ')'
  250                    | RAND '(' ')'
  251                    | SRAND '(' any_expr ')'
  252                    | expr LESSEQUAL expr
  253                    | expr '>' expr
  254                    | expr GREATEREQUAL expr
  255                    | expr EQUALEQUAL expr
  256                    | expr NOTEQUAL expr
  257                    | expr ANDAND expr
  258                    | expr OROR expr
  259                    | '!' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60 259
'%' (37) 236
'(' (40) 136 141 144 146 147 149 151 155 185 239 240 241 242 243 244
    245 246 247 248 249 250 251
')' (41) 136 141 144 146 147 149 151 155 185 239 240 241 242 243 244
    245 246 247 248 249 250 251
'*' (42) 63 234
'+' (43) 143 144 232
',' (44) 40 138 147 150 151 154 185 242 246 247
'-' (45) 145 146 233 238
'.' (46) 163 179 180
'/' (47) 235
':' (58) 12 65 66 67
';' (59) 8 9
'<' (60) 150 151 224
'=' (61) 10 11 12 30
'>' (62) 150 151 253
'[' (91) 86 177
']' (93) 86 177
'^' (94) 237
'`' (96) 165
'{' (123) 70
'}' (125) 70
error (256)
LABEL (258) 37 65 66 67 161 163 179 180 189
VARIABLE (259) 11 12 30 36 38 39 40 225
NUMBER (260) 226
TEXT (261) 22 25 49 135 136 178
COMMAND_LINE (262) 17
DELIMITED (263) 21 25 28 30 33 47
ORDINAL (264) 164 186 188
TH (265) 165
LEFT_ARROW_HEAD (266) 123
RIGHT_ARROW_HEAD (267) 124
DOUBLE_ARROW_HEAD (268) 125
LAST (269) 166 167 186 187
BOX (270) 74 170
CIRCLE (271) 75 171
ELLIPSE (272) 76 172
ARC (273) 77 173
LINE (274) 78 174
ARROW (275) 79 175
MOVE (276) 80
SPLINE (277) 81 176
HEIGHT (278) 87
RADIUS (279) 88
FIGNAME (280) 10
WIDTH (281) 89
DIAMETER (282) 90
UP (283) 13 92 93
DOWN (284) 14 94 95
RIGHT (285) 16 96 97 204 207 208
LEFT (286) 15 98 99 203 205 206
FROM (287) 100
TO (288) 30 101
AT (289) 102
WITH (290) 103 104
BY (291) 62 63 105
THEN (292) 47 106
SOLID (293) 107
DOTTED (294) 108 109
DASHED (295) 110 111
CHOP (296) 119 120
SAME (297) 121
INVISIBLE (298) 122
LJUST (299) 129
RJUST (300) 130
ABOVE (301) 131
BELOW (302) 132
OF (303) 153 159
THE (304) 153
WAY (305) 153
BETWEEN (306) 152 153
AND (307) 148 149
HERE (308) 160
DOT_N (309) 190
DOT_E (310) 191
DOT_W (311) 192
DOT_S (312) 193
DOT_NE (313) 194
DOT_SE (314) 195
DOT_NW (315) 196
DOT_SW (316) 197
DOT_C (317) 198
DOT_START (318) 199
DOT_END (319) 200
DOT_X (320) 227
DOT_Y (321) 228
DOT_HT (322) 229
DOT_WID (323) 230
DOT_RAD (324) 231
SIN (325) 240
COS (326) 241
ATAN2 (327) 242
LOG (328) 243
EXP (329) 244
SQRT (330) 245
K_MAX (331) 246
K_MIN (332) 247
INT (333) 248
RAND (334) 249 250
SRAND (335) 251
COPY (336) 22 25 28
THRU (337) 25 28
TOP (338) 201
BOTTOM (339) 202
UPPER (340) 205 207 211 213
LOWER (341) 206 208 212 214
SH (342) 21
PRINT (343) 19
CW (344) 126
CCW (345) 127
FOR (346) 30
DO (347) 30
IF (348) 47
ELSE (349) 33
ANDAND (350) 54 55 56 257
OROR (351) 57 58 59 258
NOTEQUAL (352) 53 256
EQUALEQUAL (353) 52 255
LESSEQUAL (354) 252
GREATEREQUAL (355) 254
LEFT_CORNER (356) 209 211 212
RIGHT_CORNER (357) 210 213 214
NORTH (358) 215
SOUTH (359) 216
EAST (360) 217
WEST (361) 218
CENTER (362) 219
END (363) 221
START (364) 220
RESET (365) 35 38
UNTIL (366) 49
PLOT (367) 83 84
THICKNESS (368) 133
FILL (369) 112 113
COLORED (370) 117
OUTLINED (371) 118
SHADED (372) 116
XSLANTED (373) 114
YSLANTED (374) 115
ALIGNED (375) 134
SPRINTF (376) 136
COMMAND (377) 18
DEFINE (378)
UNDEF (379)


Nonterminals, with rules where they appear

$accept (146)
    on left: 0
top (147)
    on left: 1 2, on right: 0
element_list (148)
    on left: 3, on right: 2 70 86
middle_element_list (149)
    on left: 4 5, on right: 3 5
optional_separator (150)
    on left: 6 7, on right: 1 3 65 66 67
separator (151)
    on left: 8 9, on right: 5 7 9
placeless_element (152)
    on left: 10 11 12 13 14 15 16 17 18 19 21 22 25 28 30 31 33 34
    35, on right: 71
@1 (153)
    on left: 20, on right: 21
@2 (154)
    on left: 23, on right: 25
@3 (155)
    on left: 24, on right: 25
@4 (156)
    on left: 26, on right: 28
@5 (157)
    on left: 27, on right: 28
@6 (158)
    on left: 29, on right: 30
@7 (159)
    on left: 32, on right: 33
macro_name (160)
    on left: 36 37, on right: 10
reset_variables (161)
    on left: 38 39 40, on right: 34 39 40
print_args (162)
    on left: 41 42, on right: 18 19 42
print_arg (163)
    on left: 43 44 45, on right: 41 42
simple_if (164)
    on left: 47, on right: 31 33
@8 (165)
    on left: 46, on right: 47
until (166)
    on left: 48 49, on right: 25 28
any_expr (167)
    on left: 50 51, on right: 11 12 47 165 239 240 241 242 243 244
    245 246 247 248 249 251
text_expr (168)
    on left: 52 53 54 55 56 57 58 59 60, on right: 51 54 55 56 57 58
    59 60
optional_by (169)
    on left: 61 62 63, on right: 30
element (170)
    on left: 64 65 66 67 70 71, on right: 4 5 65 73
@9 (171)
    on left: 68, on right: 70
@10 (172)
    on left: 69, on right: 70
optional_element (173)
    on left: 72 73, on right: 70
object_spec (174)
    on left: 74 75 76 77 78 79 80 81 82 83 84 86 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127 128 129 130 131 132 133 134, on right: 64 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127 128 129 130 131 132 133 134
@11 (175)
    on left: 85, on right: 86
text (176)
    on left: 135 136, on right: 44 52 53 82 84 116 117 118 128
sprintf_args (177)
    on left: 137 138, on right: 136 138
position (178)
    on left: 139 140 141, on right: 45 100 101 102 104 143 144 145
    146 147 148 149 150 151
position_not_place (179)
    on left: 142 143 144 145 146 147 148 149 150 151,
    on right: 66 139
between (180)
    on left: 152 153, on right: 148 149
expr_pair (181)
    on left: 154 155, on right: 105 142 143 144 145 146 155
place (182)
    on left: 156 157 158 159 160, on right: 67 140 141 227 228 229
    230 231
label (183)
    on left: 161 162 163, on right: 156 157 158 159 163
ordinal (184)
    on left: 164 165, on right: 167 168
optional_ordinal_last (185)
    on left: 166 167, on right: 169
nth_primitive (186)
    on left: 168 169, on right: 162
object_type (187)
    on left: 170 171 172 173 174 175 176 177 178, on right: 168 169
    186 187 188
label_path (188)
    on left: 179 180, on right: 180 182 183
relative_path (189)
    on left: 181 182 183, on right: 184 185 186 187 188 189
path (190)
    on left: 184 185 186 187 188 189, on right: 103
corner (191)
    on left: 190 191 192 193 194 195 196 197 198 199 200 201 202 203
    204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219
    220 221, on right: 157 158 159 181 183
expr (192)
    on left: 222 223, on right: 30 43 50 55 56 58 59 62 63 83 84 87
    88 89 90 91 93 95 97 99 109 111 113 114 115 120 133 138 148 149
    154 224 232 233 234 235 236 237 238 252 253 254 255 256 257 258
    259
expr_lower_than (193)
    on left: 224, on right: 222
expr_not_lower_than (194)
    on left: 225 226 227 228 229 230 231 232 233 234 235 236 237 238
    239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254
    255 256 257 258 259, on right: 150 151 223


state 0

    0 $accept: . top $end

    ';'  shift, and go to state 1

    $default  reduce using rule 6 (optional_separator)

    top                 go to state 2
    element_list        go to state 3
    optional_separator  go to state 4
    separator           go to state 5


state 1

    8 separator: ';' .

    $default  reduce using rule 8 (separator)


state 2

    0 $accept: top . $end

    $end  shift, and go to state 6


state 3

    2 top: element_list .

    $default  reduce using rule 2 (top)


state 4

    1 top: optional_separator .
    3 element_list: optional_separator . middle_element_list optional_separator

    LABEL         shift, and go to state 7
    VARIABLE      shift, and go to state 8
    TEXT          shift, and go to state 9
    COMMAND_LINE  shift, and go to state 10
    BOX           shift, and go to state 11
    CIRCLE        shift, and go to state 12
    ELLIPSE       shift, and go to state 13
    ARC           shift, and go to state 14
    LINE          shift, and go to state 15
    ARROW         shift, and go to state 16
    MOVE          shift, and go to state 17
    SPLINE        shift, and go to state 18
    FIGNAME       shift, and go to state 19
    UP            shift, and go to state 20
    DOWN          shift, and go to state 21
    RIGHT         shift, and go to state 22
    LEFT          shift, and go to state 23
    COPY          shift, and go to state 24
    SH            shift, and go to state 25
    PRINT         shift, and go to state 26
    FOR           shift, and go to state 27
    IF            shift, and go to state 28
    RESET         shift, and go to state 29
    PLOT          shift, and go to state 30
    SPRINTF       shift, and go to state 31
    COMMAND       shift, and go to state 32
    '['           shift, and go to state 33
    '{'           shift, and go to state 34

    $default  reduce using rule 1 (top)

    middle_element_list  go to state 35
    placeless_element    go to state 36
    reset_variables      go to state 37
    simple_if            go to state 38
    element              go to state 39
    object_spec          go to state 40
    text                 go to state 41


state 5

    7 optional_separator: separator .
    9 separator: separator . ';'

    ';'  shift, and go to state 42

    $default  reduce using rule 7 (optional_separator)


state 6

    0 $accept: top $end .

    $default  accept


state 7

   65 element: LABEL . ':' optional_separator element
   66        | LABEL . ':' optional_separator position_not_place
   67        | LABEL . ':' optional_separator place

    ':'  shift, and go to state 43


state 8

   11 placeless_element: VARIABLE . '=' any_expr
   12                  | VARIABLE . ':' '=' any_expr

    '='  shift, and go to state 44
    ':'  shift, and go to state 45


state 9

  135 text: TEXT .

    $default  reduce using rule 135 (text)


state 10

   17 placeless_element: COMMAND_LINE .

    $default  reduce using rule 17 (placeless_element)


state 11

   74 object_spec: BOX .

    $default  reduce using rule 74 (object_spec)


state 12

   75 object_spec: CIRCLE .

    $default  reduce using rule 75 (object_spec)


state 13

   76 object_spec: ELLIPSE .

    $default  reduce using rule 76 (object_spec)


state 14

   77 object_spec: ARC .

    $default  reduce using rule 77 (object_spec)


state 15

   78 object_spec: LINE .

    $default  reduce using rule 78 (object_spec)


state 16

   79 object_spec: ARROW .

    $default  reduce using rule 79 (object_spec)


state 17

   80 object_spec: MOVE .

    $default  reduce using rule 80 (object_spec)


state 18

   81 object_spec: SPLINE .

    $default  reduce using rule 81 (object_spec)


state 19

   10 placeless_element: FIGNAME . '=' macro_name

    '='  shift, and go to state 46


state 20

   13 placeless_element: UP .

    $default  reduce using rule 13 (placeless_element)


state 21

   14 placeless_element: DOWN .

    $default  reduce using rule 14 (placeless_element)


state 22

   16 placeless_element: RIGHT .

    $default  reduce using rule 16 (placeless_element)


state 23

   15 placeless_element: LEFT .

    $default  reduce using rule 15 (placeless_element)


state 24

   22 placeless_element: COPY . TEXT
   25                  | COPY . TEXT THRU @2 DELIMITED @3 until
   28                  | COPY . THRU @4 DELIMITED @5 until

    TEXT  shift, and go to state 47
    THRU  shift, and go to state 48


state 25

   21 placeless_element: SH . @1 DELIMITED

    $default  reduce using rule 20 (@1)

    @1  go to state 49


state 26

   19 placeless_element: PRINT . print_args

    LABEL         shift, and go to state 50
    VARIABLE      shift, and go to state 51
    NUMBER        shift, and go to state 52
    TEXT          shift, and go to state 9
    ORDINAL       shift, and go to state 53
    LAST          shift, and go to state 54
    RIGHT         shift, and go to state 55
    LEFT          shift, and go to state 56
    HERE          shift, and go to state 57
    DOT_N         shift, and go to state 58
    DOT_E         shift, and go to state 59
    DOT_W         shift, and go to state 60
    DOT_S         shift, and go to state 61
    DOT_NE        shift, and go to state 62
    DOT_SE        shift, and go to state 63
    DOT_NW        shift, and go to state 64
    DOT_SW        shift, and go to state 65
    DOT_C         shift, and go to state 66
    DOT_START     shift, and go to state 67
    DOT_END       shift, and go to state 68
    SIN           shift, and go to state 69
    COS           shift, and go to state 70
    ATAN2         shift, and go to state 71
    LOG           shift, and go to state 72
    EXP           shift, and go to state 73
    SQRT          shift, and go to state 74
    K_MAX         shift, and go to state 75
    K_MIN         shift, and go to state 76
    INT           shift, and go to state 77
    RAND          shift, and go to state 78
    SRAND         shift, and go to state 79
    TOP           shift, and go to state 80
    BOTTOM        shift, and go to state 81
    UPPER         shift, and go to state 82
    LOWER         shift, and go to state 83
    LEFT_CORNER   shift, and go to state 84
    RIGHT_CORNER  shift, and go to state 85
    NORTH         shift, and go to state 86
    SOUTH         shift, and go to state 87
    EAST          shift, and go to state 88
    WEST          shift, and go to state 89
    CENTER        shift, and go to state 90
    END           shift, and go to state 91
    START         shift, and go to state 92
    SPRINTF       shift, and go to state 31
    '('           shift, and go to state 93
    '`'           shift, and go to state 94
    '-'           shift, and go to state 95
    '!'           shift, and go to state 96

    print_args             go to state 97
    print_arg              go to state 98
    text                   go to state 99
    position               go to state 100
    position_not_place     go to state 101
    expr_pair              go to state 102
    place                  go to state 103
    label                  go to state 104
    ordinal                go to state 105
    optional_ordinal_last  go to state 106
    nth_primitive          go to state 107
    corner                 go to state 108
    expr                   go to state 109
    expr_lower_than        go to state 110
    expr_not_lower_than    go to state 111


state 27

   30 placeless_element: FOR . VARIABLE '=' expr TO expr optional_by DO @6 DELIMITED

    VARIABLE  shift, and go to state 112


state 28

   47 simple_if: IF . any_expr THEN @8 DELIMITED

    LABEL         shift, and go to state 50
    VARIABLE      shift, and go to state 51
    NUMBER        shift, and go to state 52
    TEXT          shift, and go to state 9
    ORDINAL       shift, and go to state 53
    LAST          shift, and go to state 54
    RIGHT         shift, and go to state 55
    LEFT          shift, and go to state 56
    HERE          shift, and go to state 57
    DOT_N         shift, and go to state 58
    DOT_E         shift, and go to state 59
    DOT_W         shift, and go to state 60
    DOT_S         shift, and go to state 61
    DOT_NE        shift, and go to state 62
    DOT_SE        shift, and go to state 63
    DOT_NW        shift, and go to state 64
    DOT_SW        shift, and go to state 65
    DOT_C         shift, and go to state 66
    DOT_START     shift, and go to state 67
    DOT_END       shift, and go to state 68
    SIN           shift, and go to state 69
    COS           shift, and go to state 70
    ATAN2         shift, and go to state 71
    LOG           shift, and go to state 72
    EXP           shift, and go to state 73
    SQRT          shift, and go to state 74
    K_MAX         shift, and go to state 75
    K_MIN         shift, and go to state 76
    INT           shift, and go to state 77
    RAND          shift, and go to state 78
    SRAND         shift, and go to state 79
    TOP           shift, and go to state 80
    BOTTOM        shift, and go to state 81
    UPPER         shift, and go to state 82
    LOWER         shift, and go to state 83
    LEFT_CORNER   shift, and go to state 84
    RIGHT_CORNER  shift, and go to state 85
    NORTH         shift, and go to state 86
    SOUTH         shift, and go to state 87
    EAST          shift, and go to state 88
    WEST          shift, and go to state 89
    CENTER        shift, and go to state 90
    END           shift, and go to state 91
    START         shift, and go to state 92
    SPRINTF       shift, and go to state 31
    '('           shift, and go to state 113
    '`'           shift, and go to state 94
    '-'           shift, and go to state 95
    '!'           shift, and go to state 114

    any_expr               go to state 115
    text_expr              go to state 116
    text                   go to state 117
    place                  go to state 118
    label                  go to state 104
    ordinal                go to state 105
    optional_ordinal_last  go to state 106
    nth_primitive          go to state 107
    corner                 go to state 108
    expr                   go to state 119
    expr_lower_than        go to state 110
    expr_not_lower_than    go to state 120


state 29

   35 placeless_element: RESET .
   38 reset_variables: RESET . VARIABLE

    VARIABLE  shift, and go to state 121

    $default  reduce using rule 35 (placeless_element)


state 30

   83 object_spec: PLOT . expr
   84            | PLOT . expr text

    LABEL         shift, and go to state 50
    VARIABLE      shift, and go to state 51
    NUMBER        shift, and go to state 52
    ORDINAL       shift, and go to state 53
    LAST          shift, and go to state 54
    RIGHT         shift, and go to state 55
    LEFT          shift, and go to state 56
    HERE          shift, and go to state 57
    DOT_N         shift, and go to state 58
    DOT_E         shift, and go to state 59
    DOT_W         shift, and go to state 60
    DOT_S         shift, and go to state 61
    DOT_NE        shift, and go to state 62
    DOT_SE        shift, and go to state 63
    DOT_NW        shift, and go to state 64
    DOT_SW        shift, and go to state 65
    DOT_C         shift, and go to state 66
    DOT_START     shift, and go to state 67
    DOT_END       shift, and go to state 68
    SIN           shift, and go to state 69
    COS           shift, and go to state 70
    ATAN2         shift, and go to state 71
    LOG           shift, and go to state 72
    EXP           shift, and go to state 73
    SQRT          shift, and go to state 74
    K_MAX         shift, and go to state 75
    K_MIN         shift, and go to state 76
    INT           shift, and go to state 77
    RAND          shift, and go to state 78
    SRAND         shift, and go to state 79
    TOP           shift, and go to state 80
    BOTTOM        shift, and go to state 81
    UPPER         shift, and go to state 82
    LOWER         shift, and go to state 83
    LEFT_CORNER   shift, and go to state 84
    RIGHT_CORNER  shift, and go to state 85
    NORTH         shift, and go to state 86
    SOUTH         shift, and go to state 87
    EAST          shift, and go to state 88
    WEST          shift, and go to state 89
    CENTER        shift, and go to state 90
    END           shift, and go to state 91
    START         shift, and go to state 92
    '('           shift, and go to state 113
    '`'           shift, and go to state 94
    '-'           shift, and go to state 95
    '!'           shift, and go to state 96

    place                  go to state 118
    label                  go to state 104
    ordinal                go to state 105
    optional_ordinal_last  go to state 106
    nth_primitive          go to state 107
    corner                 go to state 108
    expr                   go to state 122
    expr_lower_than        go to state 110
    expr_not_lower_than    go to state 120


state 31

  136 text: SPRINTF . '(' TEXT sprintf_args ')'

    '('  shift, and go to state 123


state 32

   18 placeless_element: COMMAND . print_args

    LABEL         shift, and go to state 50
    VARIABLE      shift, and go to state 51
    NUMBER        shift, and go to state 52
    TEXT          shift, and go to state 9
    ORDINAL       shift, and go to state 53
    LAST          shift, and go to state 54
    RIGHT         shift, and go to state 55
    LEFT          shift, and go to state 56
    HERE          shift, and go to state 57
    DOT_N         shift, and go to state 58
    DOT_E         shift, and go to state 59
    DOT_W         shift, and go to state 60
    DOT_S         shift, and go to state 61
    DOT_NE        shift, and go to state 62
    DOT_SE        shift, and go to state 63
    DOT_NW        shift, and go to state 64
    DOT_SW        shift, and go to state 65
    DOT_C         shift, and go to state 66
    DOT_START     shift, and go to state 67
    DOT_END       shift, and go to state 68
    SIN           shift, and go to state 69
    COS           shift, and go to state 70
    ATAN2         shift, and go to state 71
    LOG           shift, and go to state 72
    EXP           shift, and go to state 73
    SQRT          shift, and go to state 74
    K_MAX         shift, and go to state 75
    K_MIN         shift, and go to state 76
    INT           shift, and go to state 77
    RAND          shift, and go to state 78
    SRAND         shift, and go to state 79
    TOP           shift, and go to state 80
    BOTTOM        shift, and go to state 81
    UPPER         shift, and go to state 82
    LOWER         shift, and go to state 83
    LEFT_CORNER   shift, and go to state 84
    RIGHT_CORNER  shift, and go to state 85
    NORTH         shift, and go to state 86
    SOUTH         shift, and go to state 87
    EAST          shift, and go to state 88
    WEST          shift, and go to state 89
    CENTER        shift, and go to state 90
    END           shift, and go to state 91
    START         shift, and go to state 92
    SPRINTF       shift, and go to state 31
    '('           shift, and go to state 93
    '`'           shift, and go to state 94
    '-'           shift, and go to state 95
    '!'           shift, and go to state 96

    print_args             go to state 124
    print_arg              go to state 98
    text                   go to state 99
    position               go to state 100
    position_not_place     go to state 101
    expr_pair              go to state 102
    place                  go to state 103
    label                  go to state 104
    ordinal                go to state 105
    optional_ordinal_last  go to state 106
    nth_primitive          go to state 107
    corner                 go to state 108
    expr                   go to state 109
    expr_lower_than        go to state 110
    expr_not_lower_than    go to state 111


state 33

   86 object_spec: '[' . @11 element_list ']'

    $default  reduce using rule 85 (@11)

    @11  go to state 125


state 34

   70 element: '{' . @9 element_list '}' @10 optional_element

    $default  reduce using rule 68 (@9)

    @9  go to state 126


state 35

    3 element_list: optional_separator middle_element_list . optional_separator
    5 middle_element_list: middle_element_list . separator element

    ';'  shift, and go to state 1

    $default  reduce using rule 6 (optional_separator)

    optional_separator  go to state 127
    separator           go to state 128


state 36

   71 element: placeless_element .

    $default  reduce using rule 71 (element)


state 37

   34 placeless_element: reset_variables .
   39 reset_variables: reset_variables . VARIABLE
   40                | reset_variables . ',' VARIABLE

    VARIABLE  shift, and go to state 129
    ','       shift, and go to state 130

    $default  reduce using rule 34 (placeless_element)


state 38

   31 placeless_element: simple_if .
   33                  | simple_if . ELSE @7 DELIMITED

    ELSE  shift, and go to state 131

    $default  reduce using rule 31 (placeless_element)


state 39

    4 middle_element_list: element .

    $default  reduce using rule 4 (middle_element_list)


state 40

   64 element: object_spec .
   87 object_spec: object_spec . HEIGHT expr
   88            | object_spec . RADIUS expr
   89            | object_spec . WIDTH expr
   90            | object_spec . DIAMETER expr
   91            | object_spec . expr
   92            | object_spec . UP
   93            | object_spec . UP expr
   94            | object_spec . DOWN
   95            | object_spec . DOWN expr
   96            | object_spec . RIGHT
   97            | object_spec . RIGHT expr
   98            | object_spec . LEFT
   99            | object_spec . LEFT expr
  100            | object_spec . FROM position
  101            | object_spec . TO position
  102            | object_spec . AT position
  103            | object_spec . WITH path
  104            | object_spec . WITH position
  105            | object_spec . BY expr_pair
  106            | object_spec . THEN
  107            | object_spec . SOLID
  108            | object_spec . DOTTED
  109            | object_spec . DOTTED expr
  110            | object_spec . DASHED
  111            | object_spec . DASHED expr
  112            | object_spec . FILL
  113            | object_spec . FILL expr
  114            | object_spec . XSLANTED expr
  115            | object_spec . YSLANTED expr
  116            | object_spec . SHADED text
  117            | object_spec . COLORED text
  118            | object_spec . OUTLINED text
  119            | object_spec . CHOP
  120            | object_spec . CHOP expr
  121            | object_spec . SAME
  122            | object_spec . INVISIBLE
  123            | object_spec . LEFT_ARROW_HEAD
  124            | object_spec . RIGHT_ARROW_HEAD
  125            | object_spec . DOUBLE_ARROW_HEAD
  126            | object_spec . CW
  127            | object_spec . CCW
  128            | object_spec . text
  129            | object_spec . LJUST
  130            | object_spec . RJUST
  131            | object_spec . ABOVE
  132            | object_spec . BELOW
  133            | object_spec . THICKNESS expr
  134            | object_spec . ALIGNED
